[package]
description = "A Rust client for Automatic1111's Stable Diffusion Web UI."
edition = "2021"
license = "MIT"
name = "stable-diffusion-a1111-webui-client"
repository = "https://github.com/philpax/stable-diffusion-a1111-webui-client"
version = "0.1.1"

[dependencies]
chrono = "0.4.23"
data-encoding = "2.3.3"
image = "0.24.4"
reqwest = {version = "0.11.12", features = ["cookies", "json"]}
serde = "1.0.147"
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = {version = "1.21.2", features = ["rt"]}
