[package]
edition = "2021"
name = "stable-diffusion-a1111-webui-client"
version = "0.1.0"

[dependencies]
base64 = "0.13.1"
image = "0.24.4"
reqwest = {version = "0.11.12", features = ["cookies", "json"]}
serde = "1.0.147"
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["rt"] }
